--- a/app/src/main/res/layout/item_bill_invoice_history.xml
+++ b/app/src/main/res/layout/item_bill_invoice_history.xml
@@ -37,7 +37,7 @@
                     android:layout_marginStart="10dp"
                     android:textColor="@color/text_color_main"
                     android:textSize="@dimen/txt_home_item"
-                    android:text="@{invoice.id}"
+                    android:text="@{invoice.invoiceId}"
                     tools:text="2000"/>
 
                 <TextView
@@ -49,7 +49,7 @@
                     android:textSize="@dimen/txt_home_item"
                     android:gravity="end|center"
                     android:layout_marginEnd="10dp"
-                    android:text="@{invoice.total_items}"
+                    android:text="@{invoice.totalItems}"
                     tools:text="2000"/>
             </LinearLayout>
 
@@ -67,7 +67,7 @@
                     android:textColor="@color/text_color_main"
                     android:textSize="@dimen/txt_home_item"
                     android:layout_marginStart="10dp"
-                    android:text="@{invoice.invoice_time}"
+                    android:text="@{invoice.invoiceTime}"
                     tools:text="2000"/>
 
                 <TextView
@@ -79,7 +79,7 @@
                     android:textSize="@dimen/txt_home_item"
                     android:gravity="end|center"
                     android:layout_marginEnd="10dp"
-                    android:text="@{invoice.total_amount}"
+                    android:text="@{invoice.totalAmount}"
                     tools:text="2000"/>
             </LinearLayout>
 
