--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="nuemph_shadow_light">#EEE0C9</color>
 
 <color name="lite_grey">#D3D3D3</color>
+<color name="lite_grey_200">#F0F0F0</color>
 
     <color name="icon_color_main">#000</color>
     <color name="text_color_main">#000</color>
